<resources>
    <string name="app_name">chat</string>
    <string name="welcome">Main Page</string>
    <string name="start_activity">Start Activity</string>
    <string name="create_account">Create account</string>
    <string name="registration">Registration</string>
    <string name="nameHint">Name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="createAccountBtn">Create account</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="all_users_btn">All Users</string>
    <string name="account_settings_btn">Account Settings</string>
    <string name="loginText">Login</string>
    <string name="loginBtn">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Life, the Universe and Everything</string>
    <string name="display_name">Display Name</string>
    <string name="change_image_Btn">Change Image</string>
    <string name="change_status_Btn">Change Status</string>
    <string name="userPage_name">Display Name</string>
    <string name="userPage_default_status">User default status</string>
    <string name="userPage_online_status">Online status</string>
</resources>
