<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/userpic" />

    <TextView
        android:id="@+id/settings_displayName"
        android:layout_width="261dp"
        android:layout_height="54dp"
        android:layout_below="@+id/settings_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:text="@string/display_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/settings_statusText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/settings_displayName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/default_status"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_imageBtn"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_statusBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/change_image_Btn"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_statusBtn"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:text="@string/change_status_Btn"
        android:textSize="18sp" />

</RelativeLayout>