<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/users_singleImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/userpic" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_single_online_icon"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/users_singleName"
        android:visibility="visible"
        tools:src="@android:color/holo_green_dark" />

    <TextView
        android:id="@+id/users_singleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/users_singleImage"
        android:text="@string/userPage_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/users_singleStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/users_onlineStatus"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/users_singleImage"
        android:text="@string/userPage_default_status" />

    <TextView
        android:id="@+id/users_onlineStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/users_singleName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/users_singleImage"
        android:text="@string/userPage_online_status" />

</RelativeLayout>